dockerfile created for node app

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,13 @@
 version: '3.9'
 
 services:
+
+  node-app:
+    container_name: packet-monitoring
+    build:
+      dockerfile: ./buid/package
+      context: .
+
   prometheus:
     image: prom/prometheus:v2.30.3
     ports:
@@ -12,4 +19,4 @@ services:
 
 
 volumes:
-  prometheus-data:
+  prometheus-data: {}
