--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -6,7 +6,11 @@ rule_files:
   - alert.yml
 
 scrape_configs:
-  - job_name: packet-monitoring
+  - job_name: "prometheus"
+    scrape_interval: 5s
+    static_configs:
+      - targets: ["prometheus:9000"]
+  - job_name: "node-app"
     metrics_path: /metrics
     static_configs:
-      - targets: ['host.docker.internal:1224']
+      - targets: ["node-app:1224"]
