--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3.9'
 
 services:
-
+  # node application is the main app
   node-app:
     container_name: node-app
     build:
@@ -10,12 +10,14 @@ services:
     ports:
       - "1224:1224"
 
+  # grafana container
   grafana:
     container_name: grafana
     image: grafana/grafana:6.7.2
     ports:
       - "3000:3000"
 
+  # prometheus container
   prometheus:
     container_name: prometheus
     image: prom/prometheus:v2.30.3
@@ -26,5 +28,6 @@ services:
       - prometheus-data:/prometheus
     command: --web.enable-lifecycle  --config.file=/etc/prometheus/prometheus.yml
 
+# prometheus volumes
 volumes:
   prometheus-data: {}
