--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,9 +1,11 @@
+# prometheus configs
 global:
-  scrape_interval: 30s
-  scrape_timeout: 10s
+  scrape_interval: 5s
+  scrape_timeout: 5s
 
+# scrape configs
 scrape_configs:
   - job_name: "agents-monitoring"
     metrics_path: /metrics
     static_configs:
-      - targets: ["docker.for.mac.localhost:1224"]
+      - targets: ["docker.for.mac.localhost:1224"] # config on node-app container
